# bayesian_filtering

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  CVKalmanFiltering.cpp  DataGeneration.cpp  main.cpp
include/common/: BaseFilter.h  BaseFilter.hpp  DataGenerator.hpp
include/kf/: LinearKalmanFilter.h  LinearKalmanFilter.hpp
src/: CMakeLists.txt
src/common/: DataGenerator.cpp
src/kf/: LinearKalmanFilter.cpp
tests/: CMakeLists.txt  TestLinearKalmanFilter.cpp
